testdata/valid/internal/domain/user/repo/user.go
package repo

type User interface {
	FindByID(id int) error
}
