testdata/invalid/internal/domain/user/repo/user.go
package repo

// Missing User interface — should trigger naming.repo-file-interface

func FindUser() {}
